Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23985

MapMouseArea does not handle the top or left edges of a rectangle or polygon correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • None
    • f70c1423da4721ecf0739b4e8e3d8c56d109dcb8

    Description

      When filling a MapRectangle or MapPolygon with a MapMouseArea, the top and left edges do not detect clicks correctly. This also happens with MapCircles at the very tip of the curve on the top and left.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            alewilso Alex Wilson (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes